--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "flowbite": "^2.5.2",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028"
+    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react-feather": "^2.0.10"
   },
   "devDependencies": {
     "@types/node": "^20",
