--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "react-feather": "^2.0.10"
+    "react-feather": "^2.0.10",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
